syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package pranjal;

option java_package = "com.pranjal.grpc.user";
option java_multiple_files = true;

// Message to create a user
message CreateUserRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
}

message CreateUserResponse {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
}

service UserService {
    // create new user
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    // Get all users
    rpc GetAllUsers(google.protobuf.Empty) returns (stream CreateUserResponse);
}
